[package]
name = "whiley"
version = "0.3.5"
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A command-line build tool and package manager for Whiley."
homepage = "http://whiley.org"
repository = "https://github.com/Whiley/WhileyBuildTool"
readme = "README.md"

[[bin]]
name = "wy"

[dependencies]
clap="3.1"
log="0.4"
log4rs="1"
dirs="4"
reqwest={ version = "0.11", features = ["blocking"] }
serde="1.0"
toml="0.5"
glob="0.3"
zip="0.5"
